--- a/.env
+++ b/.env
@@ -26,3 +26,8 @@ APP_SECRET=27fbf7aec28450d6c69a59fcec1443a8
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> custom ###
+KVALUE_USER=user
+KVALUE_PASSWORD=password
+###< custom ###
