--- a/app.json
+++ b/app.json
@@ -18,6 +18,10 @@
     }
   ],
   "env": {
+    "APP_ENV": "prod",
+    "APP_SECRET": {
+      "generator": "secret"
+    },
     "KVALUE_USER": "",
     "KVALUE_PASSWORD": ""
   },
